cmake_minimum_required(VERSION 3.28)
project(fsm2_0)

set(CMAKE_CXX_STANDARD 17)

add_executable(fsm2_0 main.cpp
        contextdata.cpp
        context.cpp
        actions.cpp
        actions.cpp
        rootfsm/basestate.cpp
        rootfsm/basestate.cpp
        rootfsm/estoppfsm.cpp
        rootfsm/mainfsm.cpp
        rootfsm/pseudostartstate.cpp
        mainfsm/mainbasestate.cpp
        mainfsm/ws_state.cpp
        mainfsm/idle.cpp
        mainfsm/error_state.cpp
        mainfsm/calibration_state.cpp
        mainfsm/calibration_state.h
        mainfsm/ws_state.h
        estfsm/Connection_Lost.h
        estfsm/estbasestate.cpp
        estfsm/Connection_Lost.cpp
        estfsm/EStop1_pressed.cpp
        estfsm/EStop2_pressed.cpp
        mainfsm/ws_fsm/wsbasestate.cpp
        estfsm/Connection_Lost.h
        estfsm/EST1_and_CL.cpp
        estfsm/EST1_and_CL.h
        estfsm/EST1_and_EST2.cpp
        estfsm/EST1_and_EST2.h
        estfsm/EST2_and_CL.cpp
        estfsm/EST2_and_CL.h
        estfsm/estbasestate.h
        estfsm/EStop1_pressed.h
        estfsm/EStop2_pressed.h
        estfsm/estpseudoendstate.h
        estfsm/estpseudostartstate.h
        estfsm/Reset.cpp
        estfsm/Reset.h
        mainfsm/error_state/Both_Slide_Full_State/Anstehend_Unquittiert.cpp
        mainfsm/error_state/Both_Slide_Full_State/Anstehend_Unquittiert.h
        mainfsm/error_state/Both_Slide_Full_State/bothslidefullbasestate.cpp
        mainfsm/error_state/Both_Slide_Full_State/bothslidefullbasestate.h
        mainfsm/error_state/Both_Slide_Full_State/bothslidefullpseudoendstate.cpp
        mainfsm/error_state/Both_Slide_Full_State/bothslidefullpseudoendstate.h
        mainfsm/error_state/Both_Slide_Full_State/Slide1_Emptied.cpp
        mainfsm/error_state/Both_Slide_Full_State/Slide1_Emptied.h
        mainfsm/error_state/Both_Slide_Full_State/Slide2_Emptied.cpp
        mainfsm/error_state/Both_Slide_Full_State/Slide2_Emptied.h
        mainfsm/error_state/anstehend_quittiert.cpp
        mainfsm/error_state/anstehend_quittiert.h
        mainfsm/error_state/anstehend_unquittiert_1.cpp
        mainfsm/error_state/anstehend_unquittiert_1.h
        mainfsm/error_state/anstehend_unquittiert_2.cpp
        mainfsm/error_state/anstehend_unquittiert_2.h
        mainfsm/error_state/Both_Slide_Full_State.cpp
        mainfsm/error_state/Both_Slide_Full_State.h
        mainfsm/error_state/errorbasestate.cpp
        mainfsm/error_state/errorbasestate.h
        mainfsm/error_state/errorpseudoendstate.h
        mainfsm/error_state/gegangen_unquittiert.cpp
        mainfsm/error_state/gegangen_unquittiert.h
        mainfsm/error_state/wait_free_slide1.cpp
        mainfsm/error_state/wait_free_slide1.h
        mainfsm/error_state/wait_free_slide2.cpp
        mainfsm/error_state/wait_free_slide2.h
        mainfsm/ws_fsm/operation_fsm/hm_fsm/hmbasestate.cpp
        mainfsm/ws_fsm/operation_fsm/hm_fsm/hmbasestate.h
        mainfsm/ws_fsm/operation_fsm/hm_fsm/hmpseudoendstate.h
        mainfsm/ws_fsm/operation_fsm/hm_fsm/hmpseudostartstate.h
        mainfsm/ws_fsm/operation_fsm/hm_fsm/measuring_height.cpp
        mainfsm/ws_fsm/operation_fsm/hm_fsm/measuring_height.h
        mainfsm/ws_fsm/operation_fsm/hm_fsm/waiting_height.cpp
        mainfsm/ws_fsm/operation_fsm/hm_fsm/waiting_height.h
        mainfsm/ws_fsm/operation_fsm/hm_fsm/ws_flat.cpp
        mainfsm/ws_fsm/operation_fsm/hm_fsm/ws_flat.h
        mainfsm/ws_fsm/operation_fsm/hm_fsm/ws_high.cpp
        mainfsm/ws_fsm/operation_fsm/hm_fsm/ws_high.h
        mainfsm/ws_fsm/operation_fsm/hm_fsm/ws_high_hole.cpp
        mainfsm/ws_fsm/operation_fsm/hm_fsm/ws_high_hole.h
        mainfsm/ws_fsm/operation_fsm/hm_fsm/ws_hole.cpp
        mainfsm/ws_fsm/operation_fsm/hm_fsm/ws_hole.h
        mainfsm/ws_fsm/operation_fsm/sorting_fsm/Check_WS_Data.cpp
        mainfsm/ws_fsm/operation_fsm/sorting_fsm/Check_WS_Data.h
        mainfsm/ws_fsm/operation_fsm/sorting_fsm/Sorting_FBA1.cpp
        mainfsm/ws_fsm/operation_fsm/sorting_fsm/Sorting_FBA1.h
        mainfsm/ws_fsm/operation_fsm/sorting_fsm/Sorting_FBA2.cpp
        mainfsm/ws_fsm/operation_fsm/sorting_fsm/Sorting_FBA2.h
        mainfsm/ws_fsm/operation_fsm/sorting_fsm/sortingbasestate.cpp
        mainfsm/ws_fsm/operation_fsm/sorting_fsm/sortingbasestate.h
        mainfsm/ws_fsm/operation_fsm/sorting_fsm/sortingpseudoendstate.h
        mainfsm/ws_fsm/operation_fsm/sorting_fsm/sortingpseudostartstate.h
        mainfsm/ws_fsm/operation_fsm/sorting_fsm/ws_sorted_port.h
        mainfsm/ws_fsm/operation_fsm/sorting_fsm/ws_transfered_port.h
        mainfsm/ws_fsm/operation_fsm/transfering_fsm/checking_fba2.cpp
        mainfsm/ws_fsm/operation_fsm/transfering_fsm/checking_fba2.h
        mainfsm/ws_fsm/operation_fsm/transfering_fsm/transferingbasestate.cpp
        mainfsm/ws_fsm/operation_fsm/transfering_fsm/transferingbasestate.h
        mainfsm/ws_fsm/operation_fsm/transfering_fsm/transferingidle.cpp
        mainfsm/ws_fsm/operation_fsm/transfering_fsm/transferingidle.h
        mainfsm/ws_fsm/operation_fsm/transfering_fsm/transferingpseudoendstate.h
        mainfsm/ws_fsm/operation_fsm/transfering_fsm/transferingpseudostartstate.h
        mainfsm/ws_fsm/operation_fsm/transfering_fsm/transferingws.cpp
        mainfsm/ws_fsm/operation_fsm/transfering_fsm/transferingws.h
        mainfsm/ws_fsm/operation_fsm/transfering_fsm/waiting_remove.cpp
        mainfsm/ws_fsm/operation_fsm/transfering_fsm/waiting_remove.h
        mainfsm/ws_fsm/operation_fsm/height_measurement.cpp
        mainfsm/ws_fsm/operation_fsm/height_measurement.h
        mainfsm/ws_fsm/operation_fsm/metal_detector.cpp
        mainfsm/ws_fsm/operation_fsm/metal_detector.h
        mainfsm/ws_fsm/operation_fsm/opbasestate.cpp
        mainfsm/ws_fsm/operation_fsm/opbasestate.h
        mainfsm/ws_fsm/operation_fsm/oppseudoendstate.h
        mainfsm/ws_fsm/operation_fsm/oppseudostartstate.h
        mainfsm/ws_fsm/operation_fsm/Sorting.cpp
        mainfsm/ws_fsm/operation_fsm/Sorting.h
        mainfsm/ws_fsm/operation_fsm/Transfering.cpp
        mainfsm/ws_fsm/operation_fsm/Transfering.h
        mainfsm/ws_fsm/operation_fsm/transport.cpp
        mainfsm/ws_fsm/operation_fsm/transport.h
        mainfsm/ws_fsm/idleWS.cpp
        mainfsm/ws_fsm/idleWS.h
        mainfsm/ws_fsm/operation_state.cpp
        mainfsm/ws_fsm/operation_state.h
        mainfsm/ws_fsm/wsbasestate.h
        mainfsm/ws_fsm/wspseudostartstate.h
        mainfsm/calibration_state.h
        mainfsm/error_state.h
        mainfsm/idle.h
        mainfsm/mainbasestate.h
        mainfsm/mainpseudostartstate.h
        mainfsm/ws_state.h
        resetfsm/resetbasestate.cpp
        resetfsm/resetbasestate.h
        resetfsm/resetidle.cpp
        resetfsm/resetidle.h
        resetfsm/resetpseudoendstate.h
        resetfsm/resetpseudostartstate.h
        resetfsm/Wait_For_Reset1.cpp
        resetfsm/Wait_For_Reset1.h
        resetfsm/Wait_For_Reset2.cpp
        resetfsm/Wait_For_Reset2.h
        rootfsm/basestate.h
        rootfsm/estoppfsm.h
        rootfsm/mainfsm.h
        rootfsm/pseudostartstate.h
        subcommon/triggerprocessingstate.h
        actions.h
        context.h
        contextdata.h
        calibrationfsm/calibrationbasestate.cpp
        calibrationfsm/calibrationbasestate.h
        calibrationfsm/calibrationpseudoendstate.h
        calibrationfsm/calibrationpseudostartstate.h
        calibrationfsm/Height_High.cpp
        calibrationfsm/Height_High.h
        calibrationfsm/Measurement_ConveyorHeight_FBA1.cpp
        calibrationfsm/Measurement_ConveyorHeight_FBA1.h
        calibrationfsm/Measurement_Track_HEIGHT_LS_SRT1_Fast.cpp
        calibrationfsm/Measurement_Track_HEIGHT_LS_SRT1_Fast.h
        calibrationfsm/Measurement_Track_HEIGHT_LS_SRT1_Slow.cpp
        calibrationfsm/Measurement_Track_HEIGHT_LS_SRT1_Slow.h
        calibrationfsm/Measurement_Track_HEIGHT_LS_SRT2_Fast.cpp
        calibrationfsm/Measurement_Track_HEIGHT_LS_SRT2_Fast.h
        calibrationfsm/Measurement_Track_HEIGHT_LS_SRT2_Slow.cpp
        calibrationfsm/Measurement_Track_HEIGHT_LS_SRT2_Slow.h
        calibrationfsm/Measurement_Track_LS_SRT_END1_Fast.cpp
        calibrationfsm/Measurement_Track_LS_SRT_END1_Fast.h
        calibrationfsm/Measurement_Track_LS_SRT_END1_Slow.cpp
        calibrationfsm/Measurement_Track_LS_SRT_END1_Slow.h
        calibrationfsm/Measurement_Track_LS_SRT_END2_Fast.cpp
        calibrationfsm/Measurement_Track_LS_SRT_END2_Fast.h
        calibrationfsm/Measurement_Track_LS_STR_HEIGHT1_Fast.cpp
        calibrationfsm/Measurement_Track_LS_STR_HEIGHT1_Fast.h
        calibrationfsm/Measurement_Track_LS_STR_HEIGHT1_Slow.cpp
        calibrationfsm/Measurement_Track_LS_STR_HEIGHT1_Slow.h
        calibrationfsm/Measurement_Track_LS_STR_HEIGHT2_Fast.cpp
        calibrationfsm/Measurement_Track_LS_STR_HEIGHT2_Fast.h
        calibrationfsm/Measurement_Track_LS_STR_HEIGHT2_Slow.cpp
        calibrationfsm/Measurement_Track_LS_STR_HEIGHT2_Slow.h
        calibrationfsm/Measurement_Track_LS_STR_HEIGHT_Ready_Fast.cpp
        calibrationfsm/Measurement_Track_LS_STR_HEIGHT_Ready_Fast.h
        calibrationfsm/Measurement_Track_LS_STR_HEIGHT_Ready_Slow.cpp
        calibrationfsm/Measurement_Track_LS_STR_HEIGHT_Ready_Slow.h
        calibrationfsm/Measurement_WS_Flat.cpp
        calibrationfsm/Measurement_WS_Flat.h
        calibrationfsm/Measurement_WS_High.cpp
        calibrationfsm/Measurement_WS_High.h
        calibrationfsm/Measurement_WS_Hole.cpp
        calibrationfsm/Measurement_WS_Hole.h
        calibrationfsm/Transport_WS_Flat.cpp
        calibrationfsm/Transport_WS_Flat.h
        calibrationfsm/Transport_WS_High.cpp
        calibrationfsm/Transport_WS_High.h
        calibrationfsm/Transport_WS_Hole.cpp
        calibrationfsm/Transport_WS_Hole.h
        calibrationfsm/Wait_Calibration.cpp
        calibrationfsm/Wait_Calibration.h
        calibrationfsm/Wait_FBA2_WS_Flat.cpp
        calibrationfsm/Wait_FBA2_WS_Flat.h
        calibrationfsm/Wait_FBA2_WS_High.cpp
        calibrationfsm/Wait_FBA2_WS_High.h
        calibrationfsm/Wait_FBA2_WS_Hole.cpp
        calibrationfsm/Wait_FBA2_WS_Hole.h
        calibrationfsm/Wait_Measurement_Track_Fast.cpp
        calibrationfsm/Wait_Measurement_Track_Fast.h
        calibrationfsm/Wait_Measurement_Track_Slow.cpp
        calibrationfsm/Wait_Measurement_Track_Slow.h
        calibrationfsm/Wait_Measurement_WS_Flat.cpp
        calibrationfsm/Wait_Measurement_WS_Flat.h
        calibrationfsm/Wait_Measurement_WS_High.cpp
        calibrationfsm/Wait_Measurement_WS_High.h
        calibrationfsm/Wait_Measurement_WS_Hole.cpp
        calibrationfsm/Wait_Measurement_WS_Hole.h
        )
